operaciones para la calculadora cientifica

--- a/html/calculadoraCient.html
+++ b/html/calculadoraCient.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1>Calculadora</h1>
+  <h1>Calculadora Científica</h1>
 
 
   <form>
@@ -25,24 +25,28 @@
       <button type="button" onclick="num2()">2</button>
       <button type="button" onclick="num3()">3</button>
       <button type="button" onclick="suma()">+</button>
+      <button type="button" onclick="porcentaje()">%</button>
     </div>
     <div>
       <button type="button" onclick="num4()">4</button>
       <button type="button" onclick="num5()">5</button>
       <button type="button" onclick="num6()">6</button>
       <button type="button" onclick="resta()">-</button>
+      <button type="button" onclick="raiz()">√</button>
     </div>
     <div>
       <button type="button" onclick="num7()">7</button>
       <button type="button" onclick="num8()">8</button>
       <button type="button" onclick="num9()">9</button>
       <button type="button" onclick="multiplicar()">x</button>
+      <button type="button" onclick="pi()">π</button>
     </div>
     <div>
       <button type="button" onclick="igual()">=</button>
       <button type="button" onclick="num0()">0</button>
       <button type="button" onclick="reseteo()">c</button>
       <button type="button" onclick="dividir()">/</button>
+      <button type="button" onclick="cuadrado()">^2</button>
     </div>
   </form>
 </body>
