solucionando problemas de las operaciones

--- a/html/calculadoraCient.html
+++ b/html/calculadoraCient.html
@@ -39,14 +39,14 @@
       <button type="button" onclick="num8()">8</button>
       <button type="button" onclick="num9()">9</button>
       <button type="button" onclick="multiplicar()">x</button>
-      <button type="button" onclick="pi()">π</button>
+      <button type="button" onclick="elevar()">^</button>
     </div>
     <div>
       <button type="button" onclick="igual()">=</button>
       <button type="button" onclick="num0()">0</button>
       <button type="button" onclick="reseteo()">c</button>
       <button type="button" onclick="dividir()">/</button>
-      <button type="button" onclick="cuadrado()">^2</button>
+      <button type="button" onclick="coma()">.</button>
     </div>
   </form>
 </body>
