--- a/html/calculadoraCient.html
+++ b/html/calculadoraCient.html
@@ -8,7 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="html,cheatsheet" />
-  <link rel="stylesheet" href="../CSS/styles1.css">
+  <link rel="stylesheet" href="../CSS/styles2.css">
   <script src="../js_scripts/script2.js"></script>
 </head>
 
@@ -49,6 +49,9 @@
       <button type="button" onclick="coma()">.</button>
     </div>
   </form>
+  <div>
+    <button type="button" onclick="Inici()" id="inici">Inici</button>
+  </div>
 </body>
 
 </html>
