botó de inici calculadora normal

--- a/html/calculadora.html
+++ b/html/calculadora.html
@@ -45,6 +45,9 @@
       <button type="button" onclick="dividir()">/</button>
     </div>
   </form>
+  <div>
+    <button type="button" onclick="Inici()" id="inici">Inici</button>
+  </div>
 </body>
 
 </html>
