mejoras en el html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <meta name="keywords" content="html,cheatsheet" />
     <meta property="fb:admins" content="YourFacebookUsername" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <script src="js_scripts/script.js"></script>
 </head>
 <body>
+  <div>
   <h1>El meu primer exemple</h1>
   <p id="paragraf">Que Calculadora quieres?</p>
   <button type="button"onclick="Funcio()">Normal</button>
   <button type="button" onclick="Funcio1()">Cientifica</button>
+</div>
 </body>
 </html>
