--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <p id="paragraf">Que Calculadora quieres?</p>
     <button type="button" onclick="Funcio()">Normal</button>
     <button type="button" onclick="Funcio1()">Cientifica</button>
+    <br>
+    <br>
+    <button type="button" onclick="info()">Informacion</button>
   </div>
+  <p id="p"></p>
 </body>
 
 </html>
