--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
     <button type="button" onclick="info()">Informacion</button>
   </div>
   <p id="p"></p>
-</body>
 
+  <form class="" action="index.html" method="post">
+    <input type="number" id="x" required>
+    <input type="number" id="y" required>
+    <button type="button" onclick="mover()">M</button>
+  </form>
+  <script>
+  function mover(){
+    var x = document.getElementById("x");
+    var y = document.getElementById("y");
+    sessionStorage.setItem("x", x.value);
+    sessionStorage.setItem("y", y.value);
+  }
+  </script>
+</body>
 </html>
