codi de calculadora cientifica

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div>
-    <h1>El meu primer exemple</h1>
+    <h1>Mi primer projecto JS</h1>
     <p id="paragraf">Que Calculadora quieres?</p>
     <button type="button" onclick="Funcio()">Normal</button>
     <button type="button" onclick="Funcio1()">Cientifica</button>
@@ -27,18 +27,6 @@
   </div>
   <p id="p"></p>
 
-  <form class="" action="index.html" method="post">
-    <input type="number" id="x" required>
-    <input type="number" id="y" required>
-    <button type="button" onclick="mover()">M</button>
-  </form>
-  <script>
-  function mover(){
-    var x = document.getElementById("x");
-    var y = document.getElementById("y");
-    sessionStorage.setItem("x", x.value);
-    sessionStorage.setItem("y", y.value);
-  }
-  </script>
+
 </body>
 </html>
