--- a/html/calculadora.html
+++ b/html/calculadora.html
@@ -49,12 +49,15 @@
 </div>
   <br>
   <div>
-    <button type="button" onclick="Inici()" id="inici">Inici</button>
+    <button type="button" onclick="Inici()" class="pagina">Inici</button>
   </div>
   <br>
   <br>
-  <script>
-    $("#form").offset({top:sessionStorage.getItem("y"),left:sessionStorage.getItem("x")});
-  </script>
+  <form class="coordenadas" action="index.html" method="post">
+    <input type="number" id="x" required>
+    <input type="number" id="y" required>
+    <br>
+    <button type="button" onclick="mover()" class="pagina">Mover</button>
+  </form>
 </body>
 </html>
