icona de la pagina

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="A brief page description">
   <meta name="keywords" content="html,cheatsheet" />
   <meta property="fb:admins" content="YourFacebookUsername" />
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" href="images/icono.png" type="image/gif" sizes="16x16">
   <link rel="stylesheet" href="CSS/styles.css">
   <script src="js_scripts/script.js"></script>
 </head>
