--- a/html/calculadoraCient.html
+++ b/html/calculadoraCient.html
@@ -8,6 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="html,cheatsheet" />
+  <link rel="icon" href="images/icono.png" type="image/gif" sizes="16x16">
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <link rel="stylesheet" href="../CSS/styles2.css">
   <script src="../js_scripts/script2.js"></script>
